# seep

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  bridge.rs  chat.rs  config.rs  event.rs  main.rs  ui.rs
whatsapp/: go.mod  go.sum  main.go
